<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/ic_baseline_person_outline_24"
            android:title="@string/menu_customer" />
        <item
            android:id="@+id/nav_employe"
            android:icon="@drawable/ic_baseline_person_outline_24"
            android:title="@string/menu_employe" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_baseline_medical_services_24"
            android:title="@string/menu_product" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_order" />

    </group>
</menu>